# Open_ChemSearch-benchmark

./: .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  setup.cfg
k8s/: pod.yaml
src/chemsearch/: constants.py  io.py  logging.py  query.py  urls.py  utils.py
src/chemsearch/scripts/: benchmark.py
tests/chemsearch/: test_io.py  test_urls.py  test_utils.py
