[metadata]
version = 0.1.0.dev0
name = chemsearch-benchmark
description = Project for benchmarking chemsearch running in cluster.
url = https://github.com/ZIFODS/chemsearch-benchmark
author = Andrew Whitehouse
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
package_dir = =src
packages = find:
python_requires = >= 3.11

[options.entry_points]
console_scripts =
    benchmark = chemsearch.scripts.benchmark:main

[options.packages.find]
where = src
